# 1on1_AI

./: .env.example  .gitignore  API_Documentation.md  Procfile  README.md  api.py  api_v2.py  app.py  pyproject.toml  railway.json  requirements.txt  streamlit_app.py  template_main.py  test_1on1.txt  test_50min_meeting.txt  test_career_focus.txt  test_llm_comparison.py  test_performance_issue.txt  vercel.json  김준희.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml  refactoring.yml
api/: index.py
docs/: CODE_CONVENTION.md  CONTRIBUTING.md  architecture_design.md  project_definition.md  requirements_specification.md
frontend/: api.js  app.js  index.html  next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Button.tsx  Checkbox.tsx  Header.tsx  Input.tsx  RadioGroup.tsx  ResultDisplay.tsx  TemplateForm.tsx
src/config/: config.py  stt_config.py  template_config.py
src/models/: __init__.py  analysis.py  assembly.py  audio_processing.py  gemini.py  llm_analysis.py  multi_llm_analyzer.py  recording.py  stt_llm_analysis.py  template.py  transcription.py
src/prompts/: general_meeting_prompts.py  meeting_analysis_prompts.py  planning_meeting_prompts.py  stt_llm_prompts.py  template_prompts.py  weekly_meeting_prompts.py
src/prompts/guide_generation/: prompts.py  prompts_v1.py
src/prompts/guide_generation/archive/: prompts_v1.py
src/prompts/stt_generation/: meeting_analysis_prompts.py  title_generation_prompts.py
src/prompts/summary_generation/: prompts.py
src/prompts/template_generation/: email_prompts.py  guide_prompts.py  prompts.py  template_prompts.py
src/prompts/template_generation/archive/: guide_prompts_v2.py  guide_prompts_v3.py  prompts_v2.py  template_prompts_v1.py  template_prompts_v2.py
src/services/meeting_analyze/: analyzer.py  meeting_nodes.py  meeting_pipeline.py  speaker_stats.py  transcribe_analyze.py  workflow.py
src/services/meeting_generator/: generate_meeting.py  workflow.py
src/services/stt_processor/: STT.py  __init__.py  audio_processing.py  processor.py
src/services/summary_generator/: chains.py
src/services/template_generator/: chains.py  generate_email.py  generate_summary.py  generate_template.py  generate_template_streaming.py  generate_template_streaming_v2.py  generate_usage_guide.py
src/services/template_generator/archive/: generate_template.py  generate_template_vertex_streaming.py
src/template_generator/: chains.py  prompts.py  schemas.py
src/utils/: api_utils.py  formatter.py  helpers.py  mock_db.py  model.py  performance_logging.py  schema.py  schemas.py  stt_schemas.py  stt_utils.py  summary_schemas.py  template_schemas.py  transcription_formatter.py  util.py  utils.py
src/utils/archive/: mock_db_v1.py
src/web/: main.py  stt_main.py  template_main.py  test_endpoints.py
src/web/archive/: template_main.py
src/web/routers/: template_generator.py
tests/: interactive_test_stt.py  test_client_flow.py  test_email_generator.py  test_llm_comparison.py  test_meeting_api.py  test_streaming_client.py  test_streaming_client_v2.py  test_streaming_generator.py  test_stt_llm_integration.py  test_summary_generator.py  test_template_generator.py  test_template_generator_v2.py  test_usage_guide.py
