[tool.poetry]
name = "orblit-1on1-ai"
version = "0.1.0"
description = "AI-powered 1-on-1 meeting feedback system"
authors = ["Your Name"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
openai = "^1.0.0"
pydantic = "^1.10.13"
# pydantic-settings = "^2.0.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.0"
httpx = "^0.25.0"
assemblyai = "^0.20.0"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
numpy = "^1.24.0"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langchain-google-vertexai = "^0.1.3"
google-cloud-storage = "<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
